# ros2_ws

./: README.md  frames_2024-10-09_21.03.00.gv
install/: local_setup.sh  setup.sh
install/esp32_motor_control/share/esp32_motor_control/: package.bash  package.dsv  package.sh  package.zsh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/share/micro_ros_agent/: local_setup.sh  package.sh
install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.sh  package.sh
install/micro_ros_setup/share/micro_ros_setup/: package.sh
install/my_robot_control/lib/my_robot_control/: robot_control
install/my_robot_control/share/my_robot_control/: package.dsv  package.ps1  package.sh
install/servo_control_node/lib/servo_control_node/: servo_control
install/servo_control_node/share/servo_control_node/: package.bash  (+3 more)
log/: latest_build
src/esp32_motor_control/: package.xml  setup.py
src/esp32_motor_control/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/esp32_motor_control/log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.sh
src/my_robot_control/: CMakeLists.txt  package.xml  setup.py
src/servo_control_node/: setup.cfg  setup.py
src/simulation/: CMakeLists.txt  setup.py
src/simulation/config/: joint_limits.yaml  moveit_controllers.yaml
src/simulation/launch/: demo.launch.py  display.launch.py  gazebo.launch.py  rviz.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/simulation/urdf/: structure.urdf
(+78 files in other folders)
